[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chronos = "0.0.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

